[package]
name = "panafit"
version = "0.1.0"
edition = "2021"

[dependencies]
openfoodfacts = { git = "https://github.com/openfoodfacts/openfoodfacts-rust.git"}
axum = { version = "0.7.5", features = ["multipart"] }
reqwest = {version = "0.11", features = ["blocking", "json"]}
tokio = { version = "1.39.3", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
anyhow = "1.0.86"
serde_json = "1.0.125"
rxing = "0.6.1"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
log = "0.4.22"
env_logger = "0.11.5"
sqlx = "0.8.0"
